# Copyright 2021 The Cobalt Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bindings for the interfaces in this list will be generated, and there must
# be an implementation declared in a header that lives in the same
# directory of each IDL.
source_idl_files = [
  "//cobalt/audio/audio_buffer.idl",
  "//cobalt/audio/audio_buffer_source_node.idl",
  "//cobalt/audio/audio_context.idl",
  "//cobalt/audio/audio_destination_node.idl",
  "//cobalt/audio/audio_node.idl",

  "//cobalt/cssom/css.idl",
  "//cobalt/cssom/css_condition_rule.idl",
  "//cobalt/cssom/css_grouping_rule.idl",
  "//cobalt/cssom/css_font_face_rule.idl",
  "//cobalt/cssom/css_media_rule.idl",
  "//cobalt/cssom/css_keyframe_rule.idl",
  "//cobalt/cssom/css_keyframes_rule.idl",
  "//cobalt/cssom/css_rule.idl",
  "//cobalt/cssom/css_rule_list.idl",
  "//cobalt/cssom/css_style_declaration.idl",
  "//cobalt/cssom/css_style_rule.idl",
  "//cobalt/cssom/css_style_sheet.idl",
  "//cobalt/cssom/media_list.idl",
  "//cobalt/cssom/style_sheet.idl",
  "//cobalt/cssom/style_sheet_list.idl",

  "//cobalt/dom/abort_controller.idl",
  "//cobalt/dom/abort_signal.idl",
  "//cobalt/dom/animation_event.idl",
  "//cobalt/dom/attr.idl",
  "//cobalt/dom/audio_track.idl",
  "//cobalt/dom/audio_track_list.idl",
  "//cobalt/dom/c_val_view.idl",
  "//cobalt/dom/camera_3d.idl",
  "//cobalt/dom/captions/system_caption_settings.idl",
  "//cobalt/dom/cdata_section.idl",
  "//cobalt/dom/character_data.idl",
  "//cobalt/dom/comment.idl",
  "//cobalt/dom/device_orientation_event.idl",
  "//cobalt/dom/document.idl",
  "//cobalt/dom/document_timeline.idl",
  "//cobalt/dom/document_type.idl",
  "//cobalt/dom/dom_implementation.idl",
  "//cobalt/dom/dom_parser.idl",
  "//cobalt/dom/dom_rect.idl",
  "//cobalt/dom/dom_rect_list.idl",
  "//cobalt/dom/dom_rect_read_only.idl",
  "//cobalt/dom/dom_string_map.idl",
  "//cobalt/dom/dom_token_list.idl",
  "//cobalt/dom/element.idl",
  "//cobalt/dom/eme/media_encrypted_event.idl",
  "//cobalt/dom/eme/media_key_message_event.idl",
  "//cobalt/dom/eme/media_key_session.idl",
  "//cobalt/dom/eme/media_key_status_map.idl",
  "//cobalt/dom/eme/media_key_system_access.idl",
  "//cobalt/dom/eme/media_keys.idl",
  "//cobalt/dom/focus_event.idl",
  "//cobalt/dom/history.idl",
  "//cobalt/dom/html_anchor_element.idl",

  "//cobalt/dom/html_audio_element.idl",
  "//cobalt/dom/html_body_element.idl",
  "//cobalt/dom/html_br_element.idl",
  "//cobalt/dom/html_collection.idl",
  "//cobalt/dom/html_div_element.idl",
  "//cobalt/dom/html_element.idl",
  "//cobalt/dom/html_head_element.idl",
  "//cobalt/dom/html_heading_element.idl",
  "//cobalt/dom/html_html_element.idl",
  "//cobalt/dom/html_image_element.idl",
  "//cobalt/dom/html_link_element.idl",
  "//cobalt/dom/html_media_element.idl",
  "//cobalt/dom/html_meta_element.idl",
  "//cobalt/dom/html_paragraph_element.idl",
  "//cobalt/dom/html_script_element.idl",
  "//cobalt/dom/html_span_element.idl",
  "//cobalt/dom/html_style_element.idl",
  "//cobalt/dom/html_title_element.idl",
  "//cobalt/dom/html_unknown_element.idl",
  "//cobalt/dom/html_video_element.idl",
  "//cobalt/dom/input_event.idl",
  "//cobalt/dom/intersection_observer.idl",
  "//cobalt/dom/intersection_observer_entry.idl",
  "//cobalt/dom/keyboard_event.idl",
  "//cobalt/dom/location.idl",
  "//cobalt/dom/lottie_frame_custom_event.idl",
  "//cobalt/dom/lottie_player.idl",
  "//cobalt/dom/media_error.idl",
  "//cobalt/dom/media_query_list.idl",
  "//cobalt/dom/media_source.idl",
  "//cobalt/dom/memory_info.idl",
  "//cobalt/dom/mime_type_array.idl",
  "//cobalt/dom/mouse_event.idl",
  "//cobalt/dom/mutation_observer.idl",
  "//cobalt/dom/mutation_record.idl",
  "//cobalt/dom/named_node_map.idl",
  "//cobalt/dom/navigator.idl",
  "//cobalt/dom/node.idl",
  "//cobalt/dom/node_list.idl",
  "//cobalt/dom/on_screen_keyboard.idl",
  "//cobalt/dom/performance.idl",
  "//cobalt/dom/performance_entry.idl",
  "//cobalt/dom/performance_lifecycle_timing.idl",
  "//cobalt/dom/performance_mark.idl",
  "//cobalt/dom/performance_measure.idl",
  "//cobalt/dom/performance_navigation_timing.idl",
  "//cobalt/dom/performance_observer.idl",
  "//cobalt/dom/performance_observer_entry_list.idl",
  "//cobalt/dom/performance_resource_timing.idl",
  "//cobalt/dom/performance_timing.idl",
  "//cobalt/dom/plugin_array.idl",
  "//cobalt/dom/pointer_event.idl",
  "//cobalt/dom/progress_event.idl",
  "//cobalt/dom/screen.idl",
  "//cobalt/dom/screenshot.idl",
  "//cobalt/dom/source_buffer.idl",
  "//cobalt/dom/source_buffer_list.idl",
  "//cobalt/dom/storage.idl",
  "//cobalt/dom/storage_event.idl",
  "//cobalt/dom/test_runner.idl",
  "//cobalt/dom/text.idl",
  "//cobalt/dom/time_ranges.idl",
  "//cobalt/dom/track_default.idl",
  "//cobalt/dom/track_default_list.idl",
  "//cobalt/dom/track_event.idl",
  "//cobalt/dom/transition_event.idl",
  "//cobalt/dom/ui_event.idl",
  "//cobalt/dom/video_playback_quality.idl",
  "//cobalt/dom/video_track.idl",
  "//cobalt/dom/video_track_list.idl",
  "//cobalt/dom/wheel_event.idl",
  "//cobalt/dom/window.idl",
  "//cobalt/dom/xml_document.idl",
  "//cobalt/dom/xml_serializer.idl",

  "//cobalt/encoding/text_decoder.idl",
  "//cobalt/encoding/text_encoder.idl",

  "//cobalt/fetch/fetch_internal.idl",

  "//cobalt/h5vcc/dial/dial_http_request.idl",
  "//cobalt/h5vcc/dial/dial_http_response.idl",
  "//cobalt/h5vcc/dial/dial_server.idl",
  "//cobalt/h5vcc/h5vcc.idl",
  "//cobalt/h5vcc/h5vcc_accessibility.idl",
  "//cobalt/h5vcc/h5vcc_account_manager_internal.idl",
  "//cobalt/h5vcc/h5vcc_audio_config.idl",
  "//cobalt/h5vcc/h5vcc_audio_config_array.idl",
  "//cobalt/h5vcc/h5vcc_crash_log.idl",
  "//cobalt/h5vcc/h5vcc_deep_link_event_target.idl",
  "//cobalt/h5vcc/h5vcc_metrics.idl",
  "//cobalt/h5vcc/h5vcc_platform_service.idl",
  "//cobalt/h5vcc/h5vcc_runtime.idl",
  "//cobalt/h5vcc/h5vcc_runtime_event_target.idl",
  "//cobalt/h5vcc/h5vcc_settings.idl",
  "//cobalt/h5vcc/h5vcc_storage.idl",
  "//cobalt/h5vcc/h5vcc_screen.idl",
  "//cobalt/h5vcc/h5vcc_system.idl",
  "//cobalt/h5vcc/h5vcc_trace_event.idl",
  "//cobalt/h5vcc/h5vcc_updater.idl",

  "//cobalt/media_capture/blob_event.idl",
  "//cobalt/media_capture/media_device_info.idl",
  "//cobalt/media_capture/media_devices.idl",
  "//cobalt/media_capture/media_recorder.idl",

  "//cobalt/media_session/media_metadata.idl",
  "//cobalt/media_session/media_session.idl",

  "//cobalt/media_stream/media_stream.idl",
  "//cobalt/media_stream/media_stream_track.idl",

  "//cobalt/speech/speech_recognition.idl",
  "//cobalt/speech/speech_recognition_alternative.idl",
  "//cobalt/speech/speech_recognition_error.idl",
  "//cobalt/speech/speech_recognition_event.idl",
  "//cobalt/speech/speech_recognition_result.idl",
  "//cobalt/speech/speech_recognition_result_list.idl",

  "//cobalt/speech/speech_synthesis.idl",
  "//cobalt/speech/speech_synthesis_error_event.idl",
  "//cobalt/speech/speech_synthesis_event.idl",
  "//cobalt/speech/speech_synthesis_utterance.idl",
  "//cobalt/speech/speech_synthesis_voice.idl",

  "//cobalt/subtlecrypto/crypto_key.idl",
  "//cobalt/subtlecrypto/subtle_crypto.idl",

  "//cobalt/web/blob.idl",
  "//cobalt/web/cache.idl",
  "//cobalt/web/cache_request.idl",
  "//cobalt/web/cache_storage.idl",
  "//cobalt/web/cobalt_ua_data_values_interface.idl",
  "//cobalt/web/crypto.idl",
  "//cobalt/web/custom_event.idl",
  "//cobalt/web/dom_exception.idl",
  "//cobalt/web/error_event.idl",
  "//cobalt/web/event.idl",
  "//cobalt/web/event_listener.idl",
  "//cobalt/web/event_target.idl",
  "//cobalt/web/message_event.idl",
  "//cobalt/web/message_port.idl",
  "//cobalt/web/navigator_ua_data.idl",
  "//cobalt/web/on_error_event_listener.idl",
  "//cobalt/web/security_policy_violation_event.idl",
  "//cobalt/web/url.idl",

  "//cobalt/web_animations/animatable.idl",
  "//cobalt/web_animations/animation.idl",
  "//cobalt/web_animations/animation_effect_read_only.idl",
  "//cobalt/web_animations/animation_effect_timing_read_only.idl",
  "//cobalt/web_animations/animation_timeline.idl",
  "//cobalt/web_animations/keyframe.idl",
  "//cobalt/web_animations/keyframe_effect_read_only.idl",

  "//cobalt/webdriver/script_executor.idl",
  "//cobalt/webdriver/script_executor_params.idl",
  "//cobalt/webdriver/script_executor_result.idl",

  "//cobalt/websocket/close_event.idl",
  "//cobalt/websocket/web_socket.idl",

  "//cobalt/worker/client.idl",
  "//cobalt/worker/clients.idl",
  "//cobalt/worker/dedicated_worker_global_scope.idl",
  "//cobalt/worker/extendable_event.idl",
  "//cobalt/worker/extendable_message_event.idl",
  "//cobalt/worker/fetch_event.idl",
  "//cobalt/worker/navigation_preload_manager.idl",
  "//cobalt/worker/service_worker.idl",
  "//cobalt/worker/service_worker_container.idl",
  "//cobalt/worker/service_worker_global_scope.idl",
  "//cobalt/worker/service_worker_registration.idl",
  "//cobalt/worker/window_client.idl",
  "//cobalt/worker/worker.idl",
  "//cobalt/worker/worker_global_scope.idl",
  "//cobalt/worker/worker_location.idl",
  "//cobalt/worker/worker_navigator.idl",

  "//cobalt/xhr/xml_http_request.idl",
  "//cobalt/xhr/xml_http_request_event_target.idl",
  "//cobalt/xhr/xml_http_request_upload.idl",
]

if (!is_gold) {
  source_idl_files += [
    "//cobalt/debug/backend/css_agent.idl",
    "//cobalt/debug/backend/debug_backend.idl",
    "//cobalt/debug/console/debug_hub.idl",
    "//cobalt/debug/console/debugger_event_target.idl",
  ]
}

# IDL files that will end up generating a .h that will be #included in
# Cobalt directly. IDL files for dictionaries and enums.
generated_header_idl_files = [
  "//cobalt/audio/audio_node_channel_count_mode.idl",
  "//cobalt/audio/audio_node_channel_interpretation.idl",
  "//cobalt/debug/console/console_command.idl",
  "//cobalt/debug/console/debug_console_mode.idl",
  "//cobalt/dom/captions/caption_character_edge_style.idl",
  "//cobalt/dom/captions/caption_color.idl",
  "//cobalt/dom/captions/caption_font_family.idl",
  "//cobalt/dom/captions/caption_font_size_percentage.idl",
  "//cobalt/dom/captions/caption_opacity_percentage.idl",
  "//cobalt/dom/captions/caption_state.idl",
  "//cobalt/dom/device_orientation_event_init.idl",
  "//cobalt/dom/document_ready_state.idl",
  "//cobalt/dom/dom_parser_supported_type.idl",
  "//cobalt/dom/eme/media_encrypted_event_init.idl",
  "//cobalt/dom/eme/media_key_message_event_init.idl",
  "//cobalt/dom/eme/media_key_message_type.idl",
  "//cobalt/dom/eme/media_key_session_type.idl",
  "//cobalt/dom/eme/media_key_status.idl",
  "//cobalt/dom/eme/media_key_system_configuration.idl",
  "//cobalt/dom/eme/media_key_system_media_capability.idl",
  "//cobalt/dom/eme/media_keys_requirement.idl",
  "//cobalt/dom/event_modifier_init.idl",
  "//cobalt/dom/focus_event_init.idl",
  "//cobalt/dom/input_event_init.idl",
  "//cobalt/dom/intersection_observer_entry_init.idl",
  "//cobalt/dom/intersection_observer_init.idl",
  "//cobalt/dom/keyboard_event_init.idl",
  "//cobalt/dom/lottie_frame_custom_event_detail.idl",
  "//cobalt/dom/media_source_end_of_stream_error.idl",
  "//cobalt/dom/media_source_ready_state.idl",
  "//cobalt/dom/mouse_event_init.idl",
  "//cobalt/dom/mutation_observer_init.idl",
  "//cobalt/dom/navigation_type.idl",
  "//cobalt/dom/performance_observer_callback_options.idl",
  "//cobalt/dom/performance_observer_init.idl",
  "//cobalt/dom/pointer_event_init.idl",
  "//cobalt/dom/source_buffer_append_mode.idl",
  "//cobalt/dom/track_default_type.idl",
  "//cobalt/dom/ui_event_init.idl",
  "//cobalt/dom/visibility_state.idl",
  "//cobalt/dom/wheel_event_init.idl",
  "//cobalt/encoding/text_decode_options.idl",
  "//cobalt/encoding/text_decoder_options.idl",
  "//cobalt/encoding/text_encoder_encode_into_result.idl",
  "//cobalt/h5vcc/h5vcc_crash_type.idl",
  "//cobalt/h5vcc/h5vcc_metric_type.idl",
  "//cobalt/h5vcc/h5vcc_storage_resource_type_quota_bytes_dictionary.idl",
  "//cobalt/h5vcc/h5vcc_storage_set_quota_response.idl",
  "//cobalt/h5vcc/h5vcc_storage_write_test_response.idl",
  "//cobalt/h5vcc/h5vcc_storage_verify_test_response.idl",
  "//cobalt/h5vcc/watchdog_state.idl",
  "//cobalt/h5vcc/watchdog_replace.idl",
  "//cobalt/media_capture/blob_event_init.idl",
  "//cobalt/media_capture/media_device_kind.idl",
  "//cobalt/media_capture/media_recorder_options.idl",
  "//cobalt/media_capture/recording_state.idl",
  "//cobalt/media_session/media_image.idl",
  "//cobalt/media_session/media_metadata_init.idl",
  "//cobalt/media_session/media_position_state.idl",
  "//cobalt/media_session/media_session_action.idl",
  "//cobalt/media_session/media_session_action_details.idl",
  "//cobalt/media_session/media_session_playback_state.idl",
  "//cobalt/media_stream/media_stream_constraints.idl",
  "//cobalt/media_stream/media_track_settings.idl",
  "//cobalt/speech/speech_recognition_error_code.idl",
  "//cobalt/speech/speech_synthesis_error_code.idl",
  "//cobalt/subtlecrypto/aes_ctr_params.idl",
  "//cobalt/subtlecrypto/algorithm.idl",
  "//cobalt/subtlecrypto/import_key_algorithm_params.idl",
  "//cobalt/subtlecrypto/key_format.idl",
  "//cobalt/subtlecrypto/key_type.idl",
  "//cobalt/subtlecrypto/key_usage.idl",
  "//cobalt/web/blob_property_bag.idl",
  "//cobalt/web/cobalt_ua_data_values.idl",
  "//cobalt/web/custom_event_init.idl",
  "//cobalt/web/error_event_init.idl",
  "//cobalt/web/event_init.idl",
  "//cobalt/web/message_event_init.idl",
  "//cobalt/web/multi_cache_query_options.idl",
  "//cobalt/web/navigator_ua_brand_version.idl",
  "//cobalt/web/ua_data_values.idl",
  "//cobalt/web/ua_low_entropy_json.idl",
  "//cobalt/web_animations/animation_fill_mode.idl",
  "//cobalt/web_animations/animation_playback_direction.idl",
  "//cobalt/websocket/close_event_init.idl",
  "//cobalt/worker/client_type.idl",
  "//cobalt/worker/client_query_options.idl",
  "//cobalt/worker/extendable_event_init.idl",
  "//cobalt/worker/extendable_message_event_init.idl",
  "//cobalt/worker/fetch_event_init.idl",
  "//cobalt/worker/frame_type.idl",
  "//cobalt/worker/navigation_preload_state.idl",
  "//cobalt/worker/registration_options.idl",
  "//cobalt/worker/service_worker_state.idl",
  "//cobalt/worker/service_worker_update_via_cache.idl",
  "//cobalt/worker/structured_serialize_options.idl",
  "//cobalt/worker/worker_options.idl",
  "//cobalt/worker/worker_type.idl",
]

# Partial interfaces and the right-side of "implements". Also includes
# callback interfaces.
# Code will not get generated for these interfaces; they are used to add
# functionality to other interfaces.
dependency_idl_files = [
  "//cobalt/cssom/link_style.idl",

  "//cobalt/dom/captions/navigator_system_caption_settings.idl",
  "//cobalt/dom/document_cobalt.idl",
  "//cobalt/dom/document_cssom.idl",
  "//cobalt/dom/document_html5.idl",
  "//cobalt/dom/document_page_lifecycle.idl",
  "//cobalt/dom/document_page_visibility.idl",
  "//cobalt/dom/document_web_animations_api.idl",
  "//cobalt/dom/element_css_inline_style.idl",
  "//cobalt/dom/element_cssom_view.idl",
  "//cobalt/dom/element_dom_parsing_and_serialization.idl",
  "//cobalt/dom/element_pointer_events.idl",
  "//cobalt/dom/eme/html_media_element.idl",
  "//cobalt/dom/eme/navigator.idl",
  "//cobalt/dom/global_event_handlers.idl",
  "//cobalt/dom/html_element_cssom_view.idl",
  "//cobalt/dom/mouse_event_cssom_view.idl",
  "//cobalt/dom/navigator_licenses.idl",
  "//cobalt/dom/navigator_plugins.idl",
  "//cobalt/dom/navigator_storage_utils.idl",
  "//cobalt/dom/non_document_type_child_node.idl",
  "//cobalt/dom/non_element_parent_node.idl",
  "//cobalt/dom/parent_node.idl",
  "//cobalt/dom/performance_entry_list.idl",
  "//cobalt/dom/performance_high_resolution_time.idl",
  "//cobalt/dom/speech_synthesis_getter.idl",
  "//cobalt/dom/url_mse.idl",
  "//cobalt/dom/window_animation_timing.idl",
  "//cobalt/dom/window_cssom.idl",
  "//cobalt/dom/window_cssom_view.idl",
  "//cobalt/dom/window_event_handlers.idl",
  "//cobalt/dom/window_local_storage.idl",
  "//cobalt/dom/window_on_screen_keyboard.idl",
  "//cobalt/dom/window_performance.idl",
  "//cobalt/dom/window_session_storage.idl",
  "//cobalt/media_capture/navigator.idl",
  "//cobalt/media_session/navigator_media_session.idl",
  "//cobalt/web/buffer_source.idl",
  "//cobalt/web/global_cache_storage.idl",
  "//cobalt/web/global_crypto.idl",
  "//cobalt/web/navigator_id.idl",
  "//cobalt/web/navigator_language.idl",
  "//cobalt/web/navigator_online.idl",
  "//cobalt/web/navigator_ua.idl",
  "//cobalt/web/url_utils.idl",
  "//cobalt/web/window_timers.idl",
  "//cobalt/worker/abstract_worker.idl",
  "//cobalt/worker/navigator.idl",
]
