# Copyright 2021 The Cobalt Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("csp") {
  has_pedantic_warnings = true

  sources = [
    "content_security_policy.cc",
    "content_security_policy.h",
    "crypto.cc",
    "crypto.h",
    "directive.cc",
    "directive.h",
    "directive_list.cc",
    "directive_list.h",
    "media_list_directive.cc",
    "media_list_directive.h",
    "parsers.h",
    "source.cc",
    "source.h",
    "source_list.cc",
    "source_list.h",
    "source_list_directive.cc",
    "source_list_directive.h",
  ]

  deps = [
    "//cobalt/base",
    "//cobalt/network",
    "//crypto",
    "//net",
    "//starboard/common",
    "//url",
  ]
}

target(gtest_target_type, "csp_test") {
  has_pedantic_warnings = true
  testonly = true
  sources = [
    "content_security_policy_test.cc",
    "source_list_test.cc",
    "source_test.cc",
  ]

  deps = [
    ":csp",
    "//cobalt/base",
    "//cobalt/network",
    "//cobalt/test:run_all_unittests",
    "//net",
    "//testing/gmock",
    "//testing/gtest",
    "//url",
  ]
}
